Modified logo and favicon

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -6,7 +6,7 @@ layout: default
   <header>
     <div class="about">
       <div>
-        <a href="{{site.baseurl}}/about"><img src="{{site.baseurl}}/assets/img/{% if site.author-img %}{{site.author-img}}{% endif %}" alt="{{site.author}}"></a>
+        <a href="{{site.baseurl}}/about"><img src="{{site.baseurl}}/assets/img/{% if site.blog-img %}{{site.blog-img}}{% endif %}" alt="{{site.author}}"></a>
       </div>
       <h1>{{site.title}}</h1>
       <p>{{site.about}}</p>
