Added 'Dynamic Binding in Azure Functions' post

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -451,7 +451,8 @@ template {
   border: 1px solid #607D8B;
   -webkit-border-radius: 3px;
           border-radius: 3px;
-  padding: 0.1rem 0.5rem;
+  padding-left: 0.1rem;
+  padding-right: 0.1rem;
 }
 
 .highlight .hll {
