--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -188,6 +188,11 @@ sup {
   top: -0.5em;
 }
 
+li {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
 /* Embedded content
    ========================================================================== */
 /**
@@ -442,7 +447,7 @@ template {
   background-color: #faf9f9;
   -webkit-border-radius: 3px;
           border-radius: 3px;
-  margin: 0;
+  margin: 0.1rem 0.5rem;
 }
 
 .highlighter-rouge {
@@ -453,6 +458,8 @@ template {
           border-radius: 3px;
   padding-left: 0.1rem;
   padding-right: 0.1rem;
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 
 .highlight .hll {
